--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -12,6 +12,24 @@
 
 .block {
     padding: 30px 25px 40px 25px;
+    position: relative;
+}
+
+.block::before {
+    content: "";
+    position: absolute;
+    width: 8px;
+    height: 50vh;
+
+    background: #E0E0E0;
+    box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.3), -1px -1px 2px rgba(190, 190, 190, 0.5), inset -6px 6px 12px rgba(190, 190, 190, 0.2), inset 6px -6px 12px rgba(190, 190, 190, 0.2), inset -6px -6px 12px rgba(255, 255, 255, 0.9), inset 6px 6px 15px rgba(190, 190, 190, 0.9);
+    border-radius: 4px;
+    bottom: 65px;
+    margin-left: -28px
+}
+ 
+li:first-child:before {
+    display: none;
 }
 
 .block:first-child {
@@ -69,13 +87,20 @@
 }
 
 .block__content_input {
-    height:auto;
+    height: auto;
     width: 100%;
 
     overflow: hidden;
     border: 0;
     background-color: #E0E0E0;
     outline: none;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 24px;
+    color: #8A8383;
 }
 
 .pretty__line {
