--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -27,7 +27,7 @@
     bottom: 80px;
     margin-left: -26px
 }
- 
+
 li:first-child:before {
     display: none;
 }
@@ -107,6 +107,7 @@ li:first-child:before {
     min-width: 11px;
     height: auto;
     margin-right: 8px;
+    cursor: pointer;
 
     background: #F98B8B;
     box-shadow: 1px 1px 2px rgba(255, 153, 153, 0.3), -1px -1px 2px rgba(224, 125, 125, 0.5), inset -5px 5px 10px rgba(224, 125, 125, 0.2), inset 5px -5px 10px rgba(224, 125, 125, 0.2), inset -5px -5px 10px rgba(255, 153, 153, 0.9), inset 5px 5px 13px rgba(224, 125, 125, 0.9);
