--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -4,6 +4,8 @@
     box-shadow: -7px 7px 14px rgba(197, 197, 197, 0.2), 7px -7px 14px rgba(197, 197, 197, 0.2), -7px -7px 14px rgba(251, 251, 251, 0.9), 7px 7px 18px rgba(197, 197, 197, 0.9), inset 1px 1px 2px rgba(251, 251, 251, 0.3), inset -1px -1px 2px rgba(197, 197, 197, 0.5);
     border-radius: 35px;
     margin-bottom: 40px;
+
+    position: relative;
 }
 
 .margin {
