--- a/src/scss/abstracts/_all.scss
+++ b/src/scss/abstracts/_all.scss
@@ -2,6 +2,7 @@
 @import '../components/desk';
 @import '../components/addTask';
 @import '../components/priority';
+@import '../components/loginForm';
 
 
 
