--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -13,7 +13,7 @@
 }
 
 .block {
-    padding: 30px 25px 40px 25px;
+    padding: 30px 28px 55px 28px;
     position: relative;
 }
 
@@ -27,7 +27,7 @@
     box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.3), -1px -1px 2px rgba(190, 190, 190, 0.5), inset -6px 6px 12px rgba(190, 190, 190, 0.2), inset 6px -6px 12px rgba(190, 190, 190, 0.2), inset -6px -6px 12px rgba(255, 255, 255, 0.9), inset 6px 6px 15px rgba(190, 190, 190, 0.9);
     border-radius: 8px;
     bottom: 80px;
-    margin-left: -26px
+    margin-left: -26px;
 }
 
 li:first-child:before {
@@ -35,11 +35,11 @@ li:first-child:before {
 }
 
 .block:first-child {
-    padding-left: 50px;
+    padding-left: 56px;
 }
 
 .block:last-child {
-    padding-right: 50px;
+    padding-right: 56px;
 }
 
 .block__name {
