--- a/src/scss/components/_loginForm.scss
+++ b/src/scss/components/_loginForm.scss
@@ -1,6 +1,6 @@
-.login__form {
+.form {
     width: 500px;
-    height: 600px;
+    height: auto;
 
     background: #E0E0E0;
     box-shadow: -7px 7px 14px rgba(197, 197, 197, 0.2), 7px -7px 14px rgba(197, 197, 197, 0.2), -7px -7px 14px rgba(251, 251, 251, 0.9), 7px 7px 18px rgba(197, 197, 197, 0.9), inset 1px 1px 2px rgba(251, 251, 251, 0.3), inset -1px -1px 2px rgba(197, 197, 197, 0.5);
@@ -11,7 +11,7 @@
     flex-direction: column;
 }
 
-.login__form_container {
+.form__container {
     width: 70%;
     height: auto;
 }
@@ -19,8 +19,9 @@
 .login__form_name {
     font-style: normal;
     font-weight: 500;
-    font-size: 37px;
+    font-size: 36px;
     color: #8A8383;
+    font-family: 'Roboto', sans-serif;
 
     padding: 60px 0 45px;
 }
@@ -32,13 +33,14 @@
 .login__form_data_name {
     font-style: normal;
     font-weight: 500;
-    font-size: 22px;
+    font-size: 20px;
     color: #8A8383;
+    font-family: 'Roboto', sans-serif;
 
-    margin: 20px 0 13px;
+    margin: 22px 0 14px;
 }
 
-.login__firm_input_holder {
+.form__input_holder {
     background: #E0E0E0;
 
     box-shadow: -3px 3px 4px rgba(199, 199, 199, 0.2), 3px -3px 4px rgba(199, 199, 199, 0.2), -3px -3px 4px rgba(249, 249, 249, 0.9), 3px 3px 6px rgba(199, 199, 199, 0.9), inset 1px 1px 2px rgba(249, 249, 249, 0.3), inset -1px -1px 2px rgba(199, 199, 199, 0.5);
@@ -46,10 +48,10 @@
     border-radius: 16px;
 
     padding: 6px;
-    margin: 0 0 10px 0;
+    margin: 0 0 15px 0;
 }
 
-.login__form_input {
+.form__input {
     height: 47px;
     width: 100%;
 
@@ -74,7 +76,7 @@
     align-items: center;
 }
 
-/*----toggle---- */
+/*----toggle_noActive---- */
 .css-stmgjb {
     box-shadow: none !important;
     background: none !important;
@@ -105,21 +107,88 @@
     height: 18px !important;
 }
 
-.css-1mngnt6::before { 
+.css-1mngnt6::before {
     background: #8A8383 !important;
     top: 9.5px !important;
     left: 9.5px !important;
     width: 4.5px !important;
     height: 4.5px !important;
 }
+/*--------------------- */
 
+/*----toggle_Active---- */
+.css-hqpog9 {
+    background: #E0E0E0 !important;
+    border: 2.5px solid #E0E0E0 !important;
 
-/*----placeholder---- */
+    box-shadow: 1px 1px 1px rgba(246, 246, 246, 0.3), -1px -1px 1px rgba(202, 202, 202, 0.5), inset -1px 1px 1px rgba(202, 202, 202, 0.2), inset 1px -1px 1px rgba(202, 202, 202, 0.2), inset -1px -1px 1px rgba(246, 246, 246, 0.9), inset 1px 1px 3px rgba(202, 202, 202, 0.9) !important;
+    height: 28px !important;
+    width: 46px !important;
+}
+
+.css-hqpog9::after {
+    background: #E0E0E0 !important;
+    box-shadow: -1px 1px 1px rgba(202, 202, 202, 0.2), 1px -1px 1px rgba(202, 202, 202, 0.2), -1px -1px 1px rgba(246, 246, 246, 0.9), 1px 1px 1.5px rgba(202, 202, 202, 0.9), inset 1px 1px 1px rgba(246, 246, 246, 0.3), inset -1px -1px 1px rgba(202, 202, 202, 0.5) !important;
+
+    top: 3px !important;
+    left: 19.5px !important;
+    width: 18px !important;
+    height: 18px !important;
+}
+
+.css-hqpog9::before {
+    top: 9.5px !important;
+    left: 26px !important;
+    width: 4.5px !important;
+    height: 4.5px !important;
+
+    background: #FF9292 !important;
+    box-shadow: -1px 1px 2px rgba(217, 124, 124, 0.2), 1px -1px 2px rgba(217, 124, 124, 0.2), -1px -1px 2px rgba(255, 168, 168, 0.9), 1px 1px 2.5px rgba(217, 124, 124, 0.9), inset 0.5px 0.5px 1px rgba(255, 168, 168, 0.3), inset -0.5px -0.5px 1px rgba(217, 124, 124, 0.5) !important;
+}
+/*--------------------- */
+
+.login__form_remember_text {
+    color: #8A8383;
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+
+    padding-left: 10px;
+}
+
+.login__form_new {
+    color: #8A8383;
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+
+    margin: 4px 0;  
+}
+
+.login__form_new-mt {
+    margin-top: 20px;
+}
+
+.login__form_new-mb {
+    margin-bottom: 60px;
+}
+
+.login__form_register {
+    color: #8D8BF9;
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400; 
+}
+
+/*-----placeholder----- */
 ::-webkit-input-placeholder {
     opacity: 1;
     transition: opacity 0.3s ease;
     font-size: 18px;
     color: #BCBCBC;
+
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
 }
 
 ::-moz-placeholder {
@@ -127,6 +196,9 @@
     transition: opacity 0.3s ease;
     font-size: 18px;
     color: #BCBCBC;
+
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
 }
 
 :-moz-placeholder {
@@ -134,6 +206,9 @@
     transition: opacity 0.3s ease;
     font-size: 18px;
     color: #BCBCBC;
+
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
 }
 
 :-ms-input-placeholder {
@@ -141,6 +216,9 @@
     transition: opacity 0.3s ease;
     font-size: 18px;
     color: #BCBCBC;
+
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
 }
 
 :focus::-webkit-input-placeholder {
@@ -162,3 +240,4 @@
     opacity: 0;
     transition: opacity 0.3s ease;
 }
+/*--------------------- */
