--- a/src/scss/abstracts/_all.scss
+++ b/src/scss/abstracts/_all.scss
@@ -3,6 +3,7 @@
 @import '../components/addTask';
 @import '../components/priority';
 @import '../components/loginForm';
+@import '../components/modalWindow';
 
 
 
