--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -119,20 +119,20 @@ li:first-child:before {
 
 /* ------------------------------------ */
 .block__inner::-webkit-scrollbar {
-    width: 5px;
+    width: 0;
 }
 
-.block__inner::-webkit-scrollbar-track {
-    background: #d4d4d4;
-    box-shadow: -1px 1px 5px rgba(199, 199, 199, 0.2), 5px -5px 10px rgba(199, 199, 199, 0.2), -5px -5px 10px rgba(249, 249, 249, 0.9), 5px 5px 13px rgba(199, 199, 199, 0.9), inset 1px 1px 2px rgba(249, 249, 249, 0.3), inset -1px -1px 2px rgba(199, 199, 199, 0.5);
-}
+// .block__inner::-webkit-scrollbar-track {
+//     background: #d4d4d4;
+//     box-shadow: -1px 1px 5px rgba(199, 199, 199, 0.2), 5px -5px 10px rgba(199, 199, 199, 0.2), -5px -5px 10px rgba(249, 249, 249, 0.9), 5px 5px 13px rgba(199, 199, 199, 0.9), inset 1px 1px 2px rgba(249, 249, 249, 0.3), inset -1px -1px 2px rgba(199, 199, 199, 0.5);
+// }
 
-.block__inner::-webkit-scrollbar-thumb {
-    background: #8A8383;
-    border-radius: 40px;
+// .block__inner::-webkit-scrollbar-thumb {
+//     background: #8A8383;
+//     border-radius: 40px;
 
-}
+// }
 
-.block__inner::-webkit-scrollbar-thumb:hover {
-    background: #7c7c7c;
-}
+// .block__inner::-webkit-scrollbar-thumb:hover {
+//     background: #7c7c7c;
+// }
