--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -27,20 +27,24 @@
     box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.3), -1px -1px 2px rgba(190, 190, 190, 0.5), inset -6px 6px 12px rgba(190, 190, 190, 0.2), inset 6px -6px 12px rgba(190, 190, 190, 0.2), inset -6px -6px 12px rgba(255, 255, 255, 0.9), inset 6px 6px 15px rgba(190, 190, 190, 0.9);
     border-radius: 8px;
     bottom: 80px;
-    margin-left: -26px;
+    margin-left: -29px;
 }
 
 li:first-child:before {
     display: none;
 }
 
-.block:first-child {
-    padding-left: 56px;
+.row-padding {
+    padding: 0 28px;
 }
 
-.block:last-child {
-    padding-right: 56px;
-}
+// .block:first-child {
+//     padding-left: 56px;
+// }
+
+// .block:last-child {
+//     padding-right: 56px;
+// }
 
 .block__name {
     display: flex;
@@ -61,16 +65,21 @@ li:first-child:before {
     box-shadow: 1px 1px 2px rgba(244, 244, 244, 0.3), -1px -1px 2px rgba(204, 204, 204, 0.5), inset -6px 6px 12px rgba(204, 204, 204, 0.2), inset 6px -6px 12px rgba(204, 204, 204, 0.2), inset -6px -6px 12px rgba(244, 244, 244, 0.9), inset 6px 6px 15px rgba(204, 204, 204, 0.9);
     border-radius: 23px;
     padding-top: 25px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .block__inner_todo {
     width: 85%;
-    min-height: 40px;
-    margin: 0 auto 25px;
+    // min-height: 40px;
 
     background: #E0E0E0;
     box-shadow: -5px 5px 10px rgba(199, 199, 199, 0.2), 5px -5px 10px rgba(199, 199, 199, 0.2), -5px -5px 10px rgba(249, 249, 249, 0.9), 5px 5px 13px rgba(199, 199, 199, 0.9), inset 1px 1px 2px rgba(249, 249, 249, 0.3), inset -1px -1px 2px rgba(199, 199, 199, 0.5);
     border-radius: 25px;
+
+    margin: 0 26.5px 25px 26.5px;
 }
 
 .block__content {
@@ -107,32 +116,38 @@ li:first-child:before {
 
 .pretty__line {
     min-width: 11px;
-    height: auto;
+    min-height: 24px;
     margin-right: 8px;
     cursor: pointer;
-
-    background: #F98B8B;
-    box-shadow: 1px 1px 2px rgba(255, 153, 153, 0.3), -1px -1px 2px rgba(224, 125, 125, 0.5), inset -5px 5px 10px rgba(224, 125, 125, 0.2), inset 5px -5px 10px rgba(224, 125, 125, 0.2), inset -5px -5px 10px rgba(255, 153, 153, 0.9), inset 5px 5px 13px rgba(224, 125, 125, 0.9);
     border-radius: 20.5px;
 }
 
+.pretty__line.red {
+    background: #F98B8B;
+    box-shadow: 1px 1px 2px rgba(255, 153, 153, 0.3), -1px -1px 2px rgba(224, 125, 125, 0.5), inset -5px 5px 10px rgba(224, 125, 125, 0.2), inset 5px -5px 10px rgba(224, 125, 125, 0.2), inset -5px -5px 10px rgba(255, 153, 153, 0.9), inset 5px 5px 13px rgba(224, 125, 125, 0.9);
+}
+
+.pretty__line.purple {
+    background: #DC8BF9;
+    box-shadow: 1px 1px 2px rgba(242, 153, 255, 0.3), -1px -1px 2px rgba(198, 125, 224, 0.5), inset -5px 5px 10px rgba(198, 125, 224, 0.2), inset 5px -5px 10px rgba(198, 125, 224, 0.2), inset -5px -5px 10px rgba(242, 153, 255, 0.9), inset 5px 5px 13px rgba(198, 125, 224, 0.9);
+}
+
+.pretty__line.green {
+    background: #74CB87;
+    box-shadow: 1px 1px 2px rgba(128, 223, 149, 0.3), -1px -1px 2px rgba(104, 183, 122, 0.5), inset -5px 5px 10px rgba(104, 183, 122, 0.2), inset 5px -5px 10px rgba(104, 183, 122, 0.2), inset -5px -5px 10px rgba(128, 223, 149, 0.9), inset 5px 5px 13px rgba(104, 183, 122, 0.9);
+}
+
+.pretty__line.blue {
+    background: #7F7DE1;
+    box-shadow: 1px 1px 2px rgba(121, 119, 213, 0.2), -1px -1px 2px rgba(121, 119, 213, 0.2), inset -5px 5px 10px rgba(147, 145, 255, 0.9), inset 5px -5px 10px rgba(121, 119, 213, 0.9), inset -5px -5px 10px rgba(147, 145, 255, 0.3), inset 5px 5px 13px rgba(121, 119, 213, 0.5);
+}
+
+.pretty__line.lightblue {
+    background: #7DB7E1;
+    box-shadow: 1px 1px 2px rgba(119, 174, 213, 0.2), -1px -1px 2px rgba(119, 174, 213, 0.2), inset -5px 5px 10px rgba(145, 212, 255, 0.9), inset 5px -5px 10px rgba(119, 174, 213, 0.9), inset -5px -5px 10px rgba(145, 212, 255, 0.3), inset 5px 5px 13px rgba(119, 174, 213, 0.5);
+}
 
 /* ------------------------------------ */
 .block__inner::-webkit-scrollbar {
     width: 0;
 }
-
-// .block__inner::-webkit-scrollbar-track {
-//     background: #d4d4d4;
-//     box-shadow: -1px 1px 5px rgba(199, 199, 199, 0.2), 5px -5px 10px rgba(199, 199, 199, 0.2), -5px -5px 10px rgba(249, 249, 249, 0.9), 5px 5px 13px rgba(199, 199, 199, 0.9), inset 1px 1px 2px rgba(249, 249, 249, 0.3), inset -1px -1px 2px rgba(199, 199, 199, 0.5);
-// }
-
-// .block__inner::-webkit-scrollbar-thumb {
-//     background: #8A8383;
-//     border-radius: 40px;
-
-// }
-
-// .block__inner::-webkit-scrollbar-thumb:hover {
-//     background: #7c7c7c;
-// }
