--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -69,11 +69,11 @@ li:first-child:before {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x:hidden
 }
 
 .block__inner_todo {
     width: 85%;
-    // min-height: 40px;
 
     background: #E0E0E0;
     box-shadow: -5px 5px 10px rgba(199, 199, 199, 0.2), 5px -5px 10px rgba(199, 199, 199, 0.2), -5px -5px 10px rgba(249, 249, 249, 0.9), 5px 5px 13px rgba(199, 199, 199, 0.9), inset 1px 1px 2px rgba(249, 249, 249, 0.3), inset -1px -1px 2px rgba(199, 199, 199, 0.5);
@@ -81,6 +81,17 @@ li:first-child:before {
 
     margin: 0 26.5px 25px 26.5px;
 }
+
+@media (max-width: 1399px) {
+    .block__inner_todo {
+        margin: 0 22px 22px 22px;
+    }
+
+    .block__inner { 
+        padding-top: 22px;
+    }
+}
+
 
 .block__content {
     display: flex;
