--- a/src/scss/components/_priority.scss
+++ b/src/scss/components/_priority.scss
@@ -25,27 +25,27 @@
     border-radius: 20px;
 }
 
-.block__button-purple {
+.block__button.purple {
     background: linear-gradient(135deg, #E792FF 0%, #D184EA 100%);
     box-shadow: -3px 3px 10px rgba(198, 125, 221, 0.2), 3px -3px 10px rgba(198, 125, 221, 0.2), -3px -3px 10px rgba(242, 153, 255, 0.9), 3px 3px 13px rgba(198, 125, 221, 0.9), inset 1px 1px 2px rgba(242, 153, 255, 0.3), inset -1px -1px 2px rgba(198, 125, 221, 0.5);
 }
 
-.block__button-red {
+.block__button.red {
     background: linear-gradient(135deg, #FF9292 0%, #EA8484 100%);
     box-shadow: -3px 3px 10px rgba(221, 125, 125, 0.2), 3px -3px 10px rgba(221, 125, 125, 0.2), -3px -3px 10px rgba(255, 153, 153, 0.9), 3px 3px 13px rgba(221, 125, 125, 0.9), inset 1px 1px 2px rgba(255, 153, 153, 0.3), inset -1px -1px 2px rgba(221, 125, 125, 0.5);
 }
 
-.block__button-green {
+.block__button.green {
     background: linear-gradient(135deg, #7AD58E 0%, #6EC180 100%);
     box-shadow: -3px 3px 10px rgba(104, 183, 122, 0.2), 3px -3px 10px rgba(104, 183, 122, 0.2), -3px -3px 10px rgba(128, 223, 149, 0.9), 3px 3px 13px rgba(104, 183, 122, 0.9), inset 1px 1px 2px rgba(128, 223, 149, 0.3), inset -1px -1px 2px rgba(104, 183, 122, 0.5);
 }
 
-.block__button-blue {
+.block__button.blue {
     background: linear-gradient(135deg, #8D8BF9 0%, #7F7DE1 100%);
     box-shadow: -3px 3px 10px rgba(121, 119, 213, 0.2), 3px -3px 10px rgba(121, 119, 213, 0.2), -3px -3px 10px rgba(147, 145, 255, 0.9), 3px 3px 13px rgba(121, 119, 213, 0.9), inset 1px 1px 2px rgba(147, 145, 255, 0.3), inset -1px -1px 2px rgba(121, 119, 213, 0.5);
 }
 
-.block__button-lightblue {
+.block__button.lightblue {
     background: linear-gradient(135deg, #8BCBF9 0%, #7DB7E1 100%);
     box-shadow: -3px 3px 10px rgba(119, 174, 213, 0.2), 3px -3px 10px rgba(119, 174, 213, 0.2), -3px -3px 10px rgba(145, 212, 255, 0.9), 3px 3px 13px rgba(119, 174, 213, 0.9), inset 1px 1px 2px rgba(145, 212, 255, 0.3), inset -1px -1px 2px rgba(119, 174, 213, 0.5);
 }
