--- a/src/scss/abstracts/_all.scss
+++ b/src/scss/abstracts/_all.scss
@@ -5,6 +5,7 @@
 @import '../components/loginForm';
 @import '../components/modalWindow';
 @import '../components/error';
+@import '../components/static';
 
 @import '../components/registerForm';
 
