--- a/src/scss/components/_loginForm.scss
+++ b/src/scss/components/_loginForm.scss
@@ -52,7 +52,12 @@
     border-radius: 16px;
 
     padding: 6px;
-    margin: 0 0 15px 0;
+    margin: 0 0 8px 0;
+}
+
+.form__input_holder.error-holder {
+    background: #EC7676;
+    box-shadow: -3px 3px 4px rgba(212, 106, 106, 0.2), 3px -3px 4px rgba(212, 106, 106, 0.2), -3px -3px 4px rgba(255, 130, 130, 0.9), 3px 3px 6px rgba(212, 106, 106, 0.9), inset 1px 1px 2px rgba(255, 130, 130, 0.3), inset -1px -1px 2px rgba(212, 106, 106, 0.5);
 }
 
 .form__input {
@@ -72,7 +77,24 @@
 
     padding: 9px 14px 11px 14px;
     font-size: 18px;
-    color: #8A8383;
+    color: #918f8f;
+}
+
+.form__input.error-input {
+    background: #EC7676;
+    box-shadow: 1px 1px 2px rgba(255, 130, 130, 0.3), -1px -1px 2px rgba(212, 106, 106, 0.5), inset -3px 3px 4px rgba(212, 106, 106, 0.2), inset 3px -3px 4px rgba(212, 106, 106, 0.2), inset -3px -3px 4px rgba(255, 130, 130, 0.9), inset 3px 3px 6px rgba(212, 106, 106, 0.9);
+    color: #ebe9e9;
+}
+
+.error__message {
+    display: flex;
+    justify-content: flex-end;
+    height: 1px;
+}
+
+.error__message_text {
+    color: #EC7676;
+    font-size: 15px;
 }
 
 .form__input-textarea {
@@ -102,6 +124,7 @@
 .login__form_remember {
     display: flex;
     align-items: center;
+    margin-top: 9px;
 }
 
 /*----toggle_noActive---- */
@@ -204,6 +227,7 @@
     font-weight: 400; 
 }
 
+
 /*-----placeholder----- */
 ::-webkit-input-placeholder {
     opacity: 1;
@@ -213,6 +237,10 @@
 
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
+}
+
+.error-input::-webkit-input-placeholder {
+    color: #ebe9e9;
 }
 
 ::-moz-placeholder {
@@ -225,6 +253,10 @@
     font-weight: 400;
 }
 
+.error-input::-moz-placeholder {
+    color: #ebe9e9;
+}
+
 :-moz-placeholder {
     opacity: 1;
     transition: opacity 0.3s ease;
@@ -235,6 +267,10 @@
     font-weight: 400;
 }
 
+.error-input:-moz-placeholder {
+    color: #ebe9e9;;
+}
+
 :-ms-input-placeholder {
     opacity: 1;
     transition: opacity 0.3s ease;
@@ -243,6 +279,10 @@
 
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
+}
+
+.error-input:-ms-input-placeholder {
+    color: #ebe9e9;
 }
 
 :focus::-webkit-input-placeholder {
