--- a/src/scss/components/_modalWindow.scss
+++ b/src/scss/components/_modalWindow.scss
@@ -14,6 +14,24 @@
     justify-content: center;
 }
 
+.modalWindow__priority {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &:last-child {
+        margin-bottom: 13px;
+    }
+}
+
+.modalWindow__button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    margin-bottom: 10px;
+}
+
 .modalWindow_content {
     position: relative;
     width: 430px;
@@ -44,46 +62,6 @@
     color: #8A8383;
 
     margin: 22px 0 13px;
-}
-
-.button__big {
-    width: 100%;
-    height: 42px;
-    background-color: #FF9292;
-    box-shadow: -2px 2px 5px rgba(221, 125, 125, 0.2), 2px -2px 5px rgba(221, 125, 125, 0.2), -2px -2px 5px rgba(255, 153, 153, 0.9), 2px 2px 6px rgba(221, 125, 125, 0.9), inset 1px 1px 2px rgba(255, 153, 153, 0.3), inset -1px -1px 2px rgba(221, 125, 125, 0.5);
-    border-radius: 20px;
-    border: none;
-
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    color: #E1E1E1;
-
-    position: relative;
-    transition: background-color .1s linear;
-
-    &:hover {
-        background-color: #ed8787;
-    }
-}
-
-.button__big-green {
-    background-color: #7AD58E ;
-    box-shadow: -3px 3px 5px rgba(104, 183, 122, 0.2), 3px -3px 5px rgba(104, 183, 122, 0.2), -3px -3px 5px rgba(128, 223, 149, 0.9), 3px 3px 6px rgba(104, 183, 122, 0.9), inset 1px 1px 2px rgba(128, 223, 149, 0.3), inset -1px -1px 2px rgba(104, 183, 122, 0.5);
-    margin: 25px 0;
-    transition: background-color .1s linear;
-
-    &:hover {
-        background-color: #76ca88;
-    }
-}
-
-.button__big-mr-1 {
-    margin: 10px 0 25px;
-}
-
-.button__big-mb {
-    margin-bottom: 35px;
 }
 
 .close {
