--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -38,14 +38,6 @@ li:first-child:before {
     padding: 0 28px;
 }
 
-// .block:first-child {
-//     padding-left: 56px;
-// }
-
-// .block:last-child {
-//     padding-right: 56px;
-// }
-
 .block__name {
     display: flex;
     justify-content: center;
@@ -76,7 +68,7 @@ li:first-child:before {
     width: 85%;
 
     background: #E0E0E0;
-    box-shadow: -5px 5px 10px rgba(199, 199, 199, 0.2), 5px -5px 10px rgba(199, 199, 199, 0.2), -5px -5px 10px rgba(249, 249, 249, 0.9), 5px 5px 13px rgba(199, 199, 199, 0.9), inset 1px 1px 2px rgba(249, 249, 249, 0.3), inset -1px -1px 2px rgba(199, 199, 199, 0.5);
+    box-shadow: -5px 5px 8px rgba(199, 199, 199, 0.2), 5px -5px 8px rgba(199, 199, 199, 0.2), -5px -5px 8px rgba(249, 249, 249, 0.9), 5px 5px 10px rgba(199, 199, 199, 0.9), inset 1px 1px 2px rgba(249, 249, 249, 0.3), inset -1px -1px 2px rgba(199, 199, 199, 0.5);
     border-radius: 25px;
 
     margin: 0 26.5px 25px 26.5px;
@@ -92,10 +84,68 @@ li:first-child:before {
     }
 }
 
-
 .block__content {
     display: flex;
     padding: 20px 15px;
+    position: relative;
+}
+
+.block__item-inner {
+    &:hover {
+        > .block__item_action_menu {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+}
+
+.block__item_icon-dots {
+    position: absolute;
+    width: 13px;
+    height: 13px;
+    left: 267px;
+    bottom: 65px;
+
+    box-sizing: content-box;
+    cursor: pointer;
+    padding: 3px;
+}
+
+.block__item_action_menu {
+    position: absolute;
+    z-index: 1000;
+    width: 85px;
+    height: 30px;
+    
+    opacity: 0;
+    visibility: hidden;
+
+    background: #E0E0E0;
+    box-shadow: -2.5px 2.5px 4px rgba(199, 199, 199, 0.2), 2.5px -2.5px 4px rgba(199, 199, 199, 0.2), -2.5px -2.5px 4px rgba(249, 249, 249, 0.9), 2.5px 2.5px 5px rgba(199, 199, 199, 0.9), inset 1px 1px 2px rgba(249, 249, 249, 0.3), inset -1px -1px 2px rgba(199, 199, 199, 0.5);
+    border-radius: 10px;
+
+    cursor: pointer;
+    left: 213px;
+    top: 19px;
+    transition: visibility 0s, opacity 0.09s linear;
+}
+
+.block__item_action_menu_text {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    color: #8A8383;
+    transition: color .1s linear;
+    &:hover {
+        color: #656161;
+    }
 }
 
 .block__content_text {
