--- a/src/scss/components/_modalWindow.scss
+++ b/src/scss/components/_modalWindow.scss
@@ -100,6 +100,16 @@
     }
 }
 
+.close__button.task {
+    --size: 13px;
+    --heightLine: 2px;
+    --colorLine: #a3a1a1;
+
+    &:hover {
+        --colorLine: #777777;
+    }
+}
+
 .close__button::before,
 .close__button::after {
     position: absolute;
