--- a/src/scss/abstracts/_all.scss
+++ b/src/scss/abstracts/_all.scss
@@ -6,6 +6,7 @@
 @import '../components/modalWindow';
 @import '../components/error';
 @import '../components/static';
+@import '../components/selectChanges';
 
 @import '../components/registerForm';
 
