--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,6 +14,11 @@ body {
     -moz-osx-font-smoothing: grayscale;
     background-color: #E0E0E0;
 }
+
+.modal-open {
+    height: 100vh;
+    overflow-y: hidden;
+}
   
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
