--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -3,7 +3,7 @@
     background: #E0E0E0;
     box-shadow: -7px 7px 14px rgba(197, 197, 197, 0.2), 7px -7px 14px rgba(197, 197, 197, 0.2), -7px -7px 14px rgba(251, 251, 251, 0.9), 7px 7px 18px rgba(197, 197, 197, 0.9), inset 1px 1px 2px rgba(251, 251, 251, 0.3), inset -1px -1px 2px rgba(197, 197, 197, 0.5);
     border-radius: 35px;
-    margin-bottom: 40px;
+    // margin-bottom: 40px;
 
     position: relative;
 }
@@ -13,7 +13,7 @@
 }
 
 .block {
-    padding: 30px 28px 55px 28px;
+    padding: 30px 28px 16px 28px;
     position: relative;
 }
 
@@ -36,6 +36,7 @@ li:first-child:before {
 
 .row-padding {
     padding: 0 28px;
+    margin-bottom: 37px;
 }
 
 // .block:first-child {
@@ -104,6 +105,7 @@ li:first-child:before {
     font-weight: 400;
     font-size: 17px;
     line-height: 24px;
+    word-break: break-all;
 
     color: #8A8383;
 }
@@ -136,26 +138,46 @@ li:first-child:before {
 .pretty__line.red {
     background: #F98B8B;
     box-shadow: 1px 1px 2px rgba(255, 153, 153, 0.3), -1px -1px 2px rgba(224, 125, 125, 0.5), inset -5px 5px 10px rgba(224, 125, 125, 0.2), inset 5px -5px 10px rgba(224, 125, 125, 0.2), inset -5px -5px 10px rgba(255, 153, 153, 0.9), inset 5px 5px 13px rgba(224, 125, 125, 0.9);
+    transition: background-color .1s linear;
+    &:hover {
+        background-color: #c97070;
+    }
 }
 
 .pretty__line.purple {
     background: #DC8BF9;
     box-shadow: 1px 1px 2px rgba(242, 153, 255, 0.3), -1px -1px 2px rgba(198, 125, 224, 0.5), inset -5px 5px 10px rgba(198, 125, 224, 0.2), inset 5px -5px 10px rgba(198, 125, 224, 0.2), inset -5px -5px 10px rgba(242, 153, 255, 0.9), inset 5px 5px 13px rgba(198, 125, 224, 0.9);
+    transition: background-color .1s linear;
+    &:hover {
+        background-color: #b370cb;
+    }
 }
 
 .pretty__line.green {
     background: #74CB87;
     box-shadow: 1px 1px 2px rgba(128, 223, 149, 0.3), -1px -1px 2px rgba(104, 183, 122, 0.5), inset -5px 5px 10px rgba(104, 183, 122, 0.2), inset 5px -5px 10px rgba(104, 183, 122, 0.2), inset -5px -5px 10px rgba(128, 223, 149, 0.9), inset 5px 5px 13px rgba(104, 183, 122, 0.9);
+    transition: background-color .1s linear;
+    &:hover {
+        background-color: #589866;
+    }
 }
 
 .pretty__line.blue {
     background: #7F7DE1;
     box-shadow: 1px 1px 2px rgba(121, 119, 213, 0.2), -1px -1px 2px rgba(121, 119, 213, 0.2), inset -5px 5px 10px rgba(147, 145, 255, 0.9), inset 5px -5px 10px rgba(121, 119, 213, 0.9), inset -5px -5px 10px rgba(147, 145, 255, 0.3), inset 5px 5px 13px rgba(121, 119, 213, 0.5);
+    transition: background-color .1s linear;
+    &:hover {
+        background-color: #5a59a2;
+    }
 }
 
 .pretty__line.lightblue {
     background: #7DB7E1;
     box-shadow: 1px 1px 2px rgba(119, 174, 213, 0.2), -1px -1px 2px rgba(119, 174, 213, 0.2), inset -5px 5px 10px rgba(145, 212, 255, 0.9), inset 5px -5px 10px rgba(119, 174, 213, 0.9), inset -5px -5px 10px rgba(145, 212, 255, 0.3), inset 5px 5px 13px rgba(119, 174, 213, 0.5);
+    transition: background-color .1s linear;
+    &:hover {
+        background-color: #3076a7;
+    }
 }
 
 /* ------------------------------------ */
