--- a/src/scss/components/_static.scss
+++ b/src/scss/components/_static.scss
@@ -12,7 +12,7 @@
     font-weight: 500;
     font-size: 25px;
     line-height: 24px;
-    color: #8A8383;
+    color: #B9ADAD;
 
     margin: -20px 0 30px 50px
 }
