--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -39,14 +39,40 @@ li:first-child:before {
     margin-bottom: 37px;
 }
 
-.block__name {
+.block__status-inner {
     display: flex;
     justify-content: center;
-    margin-bottom: 30px;
+    align-items: center;
+}
+
+.block__status_name {
+    margin: 0px 10px 30px 0px;
     font-family: 'Roboto';
     font-weight: 500;
     font-size: 45px;
     color: #8A8383;
+}
+
+.block__minus {
+    width: 20px;
+    height: 20px;
+    color: #D9D9D9;
+    margin-bottom: 25px;
+    border-radius: 50%;
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    box-shadow: -2px 2px 2px rgba(195, 195, 195, 0.2), 2px -2px 2px rgba(195, 195, 195, 0.2), -2px -2px 2px rgba(239, 239, 239, 0.9), 2px 2px 2.5px rgba(195, 195, 195, 0.9), inset 1px 1px 1px rgba(239, 239, 239, 0.3), inset -1px -1px 1px rgba(195, 195, 195, 0.5);
+}
+
+.block__minus-line {
+    width: 10px;
+    height: 1.5px;
+    background-color: #9d9a9a;
+    border-radius: 2px;
 }
 
 /* ------------------------------------ */
@@ -76,10 +102,6 @@ li:first-child:before {
     margin: 0 26.5px 25px 26.5px;
 }
 
-.block__inner_todo.editMode { 
-    border: 2px solid #8A8383;
-}
-
 @media (max-width: 1399px) {
     .block__inner_todo {
         margin: 0 22px 22px 22px;
@@ -90,19 +112,28 @@ li:first-child:before {
     }
 }
 
-.block__inner_delete {
+.block__inner-editPan {
     position: relative;
     z-index: 1000;
+    height: 10px;
+    width: 10px;
 
-    margin-left: 90%;
-    margin-top: 2px;
+    margin-left: 91.5%;
+    margin-top: 6px;
     box-sizing: content-box;
     cursor: pointer;
     padding: 4px 4px 4px 4px;
+
+    border-radius: 50%;
+    background-color: #D9D9D9;
+    box-shadow: -2px 2px 2px rgba(195, 195, 195, 0.2), 2px -2px 2px rgba(195, 195, 195, 0.2), -2px -2px 2px rgba(239, 239, 239, 0.9), 2px 2px 2.5px rgba(195, 195, 195, 0.9), inset 1px 1px 1px rgba(239, 239, 239, 0.3), inset -1px -1px 1px rgba(195, 195, 195, 0.5);
 }
 
-.block__inner_delete.editMode {
-    padding: 2px 6px 2px 6px;
+.block__inner-editPan-img {
+    position: absolute;
+    top: 4px;
+    height: 9px;
+    width: 9px;
 }
 
 .block__inner_content {
@@ -111,11 +142,7 @@ li:first-child:before {
 
 .block__content {
     display: flex;
-    padding: 20px 15px;
-}
-
-.block__content.editMode {
-    padding: 22px 13px 18px 13px;
+    padding: 15px 15px;
 }
 
 .block__content_text_area {
@@ -130,6 +157,7 @@ li:first-child:before {
     font-size: 17px;
     line-height: 24px;
     word-break: break-all;
+    padding: 5px 6px;
 
     color: #8A8383;
 }
@@ -147,22 +175,27 @@ li:first-child:before {
     font-size: 17px;
     line-height: 24px;
     color: #8A8383;
+    padding: 5px 6px;
 
+    word-break: break-all;
     overflow-y: hidden;
     border: none;
     outline: none;
-    padding: 0;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
     resize: none;
 }
 
+.block__content_input.editMode {
+    border-radius: 10px;
+    box-shadow: 1px 1px 2px rgba(246, 246, 246, 0.3), -1px -1px 2px rgba(202, 202, 202, 0.5), inset -5px 5px 10px rgba(202, 202, 202, 0.2), inset 5px -5px 10px rgba(202, 202, 202, 0.2), inset -5px -5px 10px rgba(246, 246, 246, 0.9), inset 5px 5px 13px rgba(202, 202, 202, 0.9);
+}
+
 .pretty__line {
     min-width: 11px;
     min-height: 24px;
-    margin-right: 8px;
-    cursor: pointer;
+    margin-right: 6px;
     border-radius: 20.5px;
 }
 
@@ -170,45 +203,30 @@ li:first-child:before {
     background: #F98B8B;
     box-shadow: 1px 1px 2px rgba(255, 153, 153, 0.3), -1px -1px 2px rgba(224, 125, 125, 0.5), inset -5px 5px 10px rgba(224, 125, 125, 0.2), inset 5px -5px 10px rgba(224, 125, 125, 0.2), inset -5px -5px 10px rgba(255, 153, 153, 0.9), inset 5px 5px 13px rgba(224, 125, 125, 0.9);
     transition: background-color .1s linear;
-    &:hover {
-        background-color: #c97070;
-    }
 }
 
 .pretty__line.purple {
     background: #DC8BF9;
     box-shadow: 1px 1px 2px rgba(242, 153, 255, 0.3), -1px -1px 2px rgba(198, 125, 224, 0.5), inset -5px 5px 10px rgba(198, 125, 224, 0.2), inset 5px -5px 10px rgba(198, 125, 224, 0.2), inset -5px -5px 10px rgba(242, 153, 255, 0.9), inset 5px 5px 13px rgba(198, 125, 224, 0.9);
     transition: background-color .1s linear;
-    &:hover {
-        background-color: #b370cb;
-    }
 }
 
 .pretty__line.green {
     background: #74CB87;
     box-shadow: 1px 1px 2px rgba(128, 223, 149, 0.3), -1px -1px 2px rgba(104, 183, 122, 0.5), inset -5px 5px 10px rgba(104, 183, 122, 0.2), inset 5px -5px 10px rgba(104, 183, 122, 0.2), inset -5px -5px 10px rgba(128, 223, 149, 0.9), inset 5px 5px 13px rgba(104, 183, 122, 0.9);
     transition: background-color .1s linear;
-    &:hover {
-        background-color: #589866;
-    }
 }
 
 .pretty__line.blue {
     background: #7F7DE1;
     box-shadow: 1px 1px 2px rgba(121, 119, 213, 0.2), -1px -1px 2px rgba(121, 119, 213, 0.2), inset -5px 5px 10px rgba(147, 145, 255, 0.9), inset 5px -5px 10px rgba(121, 119, 213, 0.9), inset -5px -5px 10px rgba(147, 145, 255, 0.3), inset 5px 5px 13px rgba(121, 119, 213, 0.5);
     transition: background-color .1s linear;
-    &:hover {
-        background-color: #5a59a2;
-    }
 }
 
 .pretty__line.lightblue {
     background: #7DB7E1;
     box-shadow: 1px 1px 2px rgba(119, 174, 213, 0.2), -1px -1px 2px rgba(119, 174, 213, 0.2), inset -5px 5px 10px rgba(145, 212, 255, 0.9), inset 5px -5px 10px rgba(119, 174, 213, 0.9), inset -5px -5px 10px rgba(145, 212, 255, 0.3), inset 5px 5px 13px rgba(119, 174, 213, 0.5);
     transition: background-color .1s linear;
-    &:hover {
-        background-color: #3076a7;
-    }
 }
 
 /* ------------------------------------ */
