--- a/src/scss/components/_modalWindow.scss
+++ b/src/scss/components/_modalWindow.scss
@@ -32,6 +32,10 @@
     margin-bottom: 10px;
 }
 
+.modalWindow__button.task {
+    margin-bottom: 8px;
+}
+
 .modalWindow_content {
     position: relative;
     width: 430px;
