--- a/src/scss/components/_addTask.scss
+++ b/src/scss/components/_addTask.scss
@@ -16,7 +16,7 @@
     cursor: pointer;
     transition: 0.5s;
     margin-right: 15px;
-    margin-top: -50px;
+    margin-top: -10px;
 
     &:hover {
         background: #d6d4d4;
@@ -26,6 +26,41 @@
 .addTask.demo {
     margin-right: 15px;
     margin-top: -30px;
+}
+
+.addTask-absolute {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+
+    background: #E0E0E0;
+    box-shadow: -5px 5px 10px rgba(202, 202, 202, 0.2), 5px -5px 10px rgba(202, 202, 202, 0.2), -5px -5px 10px rgba(246, 246, 246, 0.9), 5px 5px 13px rgba(202, 202, 202, 0.9), inset 1px 1px 2px rgba(246, 246, 246, 0.3), inset -1px -1px 2px rgba(202, 202, 202, 0.5);
+    cursor: pointer;
+    transition: 0.5s;
+
+    position: absolute;
+    right: 18px;
+    bottom: 16px;
+
+    &:hover {
+        background: #d6d4d4;
+    }
+}
+
+.addTask-absolute.demo {
+    bottom: 75px;
+}
+
+.addTask__visibility {
+    visibility: hidden;
+}
+
+.addTask__main {
+    margin: 0;
 }
 
 :root {
