--- a/src/scss/components/_selectChanges.scss
+++ b/src/scss/components/_selectChanges.scss
@@ -1,4 +1,3 @@
-
 .selectChanges {
     display: flex;
     flex-direction: column;
@@ -13,12 +12,36 @@
 
     position: sticky;
     left: 100vw;
-    bottom: 177px;
+    bottom: 178px;
+    margin-top: -80px;
 }
 
 .selectChanges.demo {
     bottom: 175px;
 }
+
+.selectChanges-absolute {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 120px;
+    height: 110px;
+    border-radius: 20px;
+    background: #E0E0E0;
+    box-shadow: -5px 5px 10px rgba(202, 202, 202, 0.2), 5px -5px 10px rgba(202, 202, 202, 0.2), -5px -5px 10px rgba(246, 246, 246, 0.9), 5px 5px 13px rgba(202, 202, 202, 0.9), inset 1px 1px 2px rgba(246, 246, 246, 0.3), inset -1px -1px 2px rgba(202, 202, 202, 0.5);
+
+    position: absolute;
+    right: 0;
+    bottom: 105px;
+}
+
+.selectChanges-absolute.demo {
+    bottom: 162px;
+}
+
+
 
 .selectChanges_task {
     font-style: normal;
@@ -27,8 +50,9 @@
     color: #8A8383;
     font-family: 'Roboto', sans-serif;
 
-    margin-bottom: 22px;
+    margin-bottom: 18px;
     cursor: pointer;
+    padding: 4px;
 
     transition: 0.1s;
     &:hover {
@@ -43,6 +67,8 @@
     color: #8A8383;
     font-family: 'Roboto', sans-serif;
     cursor: pointer;
+    padding: 4px;
+
 
     transition: 0.1s;
     &:hover {
