--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -17,23 +17,6 @@
     position: relative;
 }
 
-.block::before {
-    content: "";
-    position: absolute;
-    width: 4px;
-    height: 50vh;
-
-    background: #E0E0E0;
-    box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.3), -1px -1px 2px rgba(190, 190, 190, 0.5), inset -6px 6px 12px rgba(190, 190, 190, 0.2), inset 6px -6px 12px rgba(190, 190, 190, 0.2), inset -6px -6px 12px rgba(255, 255, 255, 0.9), inset 6px 6px 15px rgba(190, 190, 190, 0.9);
-    border-radius: 8px;
-    bottom: 80px;
-    margin-left: -29px;
-}
-
-li:first-child:before {
-    display: none;
-}
-
 .row-padding {
     padding: 0 28px;
     margin-bottom: 37px;
@@ -56,10 +39,12 @@ li:first-child:before {
 .block__minus {
     width: 20px;
     height: 20px;
-    color: #D9D9D9;
+    background-color: #D9D9D9;
     margin-bottom: 25px;
     border-radius: 50%;
     cursor: pointer;
+    border: none;
+    padding: 0;
 
     display: flex;
     align-items: center;
@@ -114,7 +99,6 @@ li:first-child:before {
 
 .block__inner-editPan {
     position: relative;
-    z-index: 1000;
     height: 10px;
     width: 10px;
 
@@ -122,7 +106,8 @@ li:first-child:before {
     margin-top: 6px;
     box-sizing: content-box;
     cursor: pointer;
-    padding: 4px 4px 4px 4px;
+    border: none;
+    padding: 4px;
 
     border-radius: 50%;
     background-color: #D9D9D9;
@@ -136,6 +121,7 @@ li:first-child:before {
 .block__inner-editPan-img {
     position: absolute;
     top: 4px;
+    left: 5px;
     height: 9px;
     width: 9px;
 }
@@ -248,7 +234,7 @@ li:first-child:before {
     width: 45%;
     height: 35px;
     border-radius: 10px;
-    padding: 0 10px;
+    padding: 0 10px 1px 10px;
 }
 
 .block__content_selection_button.delete {
@@ -271,7 +257,7 @@ li:first-child:before {
     }
 
     &:disabled {
-        opacity: 0.6;
+        // opacity: 0.6;
         &:hover {
             background-color: #74CB86;
         }
