--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -3,7 +3,7 @@
     background: #E0E0E0;
     box-shadow: -7px 7px 14px rgba(197, 197, 197, 0.2), 7px -7px 14px rgba(197, 197, 197, 0.2), -7px -7px 14px rgba(251, 251, 251, 0.9), 7px 7px 18px rgba(197, 197, 197, 0.9), inset 1px 1px 2px rgba(251, 251, 251, 0.3), inset -1px -1px 2px rgba(197, 197, 197, 0.5);
     border-radius: 35px;
-    // margin-bottom: 40px;
+    min-height: 75vh;
 
     position: relative;
 }
@@ -23,7 +23,7 @@
     margin-bottom: 37px;
 }
 
-.block__wraper {
+.block__wrapper {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
@@ -261,6 +261,13 @@
     &:hover {
         background-color: rgb(223, 69, 69);
     }
+
+    &:disabled {
+        opacity: 0.6;
+        &:hover {
+            background-color: #E84E4E;
+        }
+    }
 }
 
 .block__content_selection_button.apply {
@@ -273,11 +280,10 @@
     }
 
     &:disabled {
-        // opacity: 0.6;
+        opacity: 0.6;
         &:hover {
             background-color: #74CB86;
         }
-    
     }
 }
 
