--- a/src/scss/components/_addTask.scss
+++ b/src/scss/components/_addTask.scss
@@ -40,7 +40,7 @@
     background: #E0E0E0;
     box-shadow: -5px 5px 10px rgba(202, 202, 202, 0.2), 5px -5px 10px rgba(202, 202, 202, 0.2), -5px -5px 10px rgba(246, 246, 246, 0.9), 5px 5px 13px rgba(202, 202, 202, 0.9), inset 1px 1px 2px rgba(246, 246, 246, 0.3), inset -1px -1px 2px rgba(202, 202, 202, 0.5);
     cursor: pointer;
-    transition: 0.5s;
+    transition: 0.4s;
 
     position: absolute;
     right: 18px;
@@ -53,6 +53,28 @@
 
 .addTask-absolute.demo {
     bottom: 75px;
+}
+
+@media (max-width: 1399px) {
+    .addTask-absolute.demo {
+        bottom: 80px;
+    }
+
+    .addTask-absolute {
+        width: 65px;
+        height: 65px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .addTask-absolute.demo {
+        right: 15px;
+    }
+
+    .addTask-absolute {
+        width: 60px;
+        height: 60px;
+    }
 }
 
 .addTask__visibility {
@@ -101,6 +123,13 @@
     transition-timing-function: var(--transitionTimingFunction);
     transition-property: transform, background-color;
     border-radius: 40px;
+}
+
+@media (max-width: 1399px) {
+    .addTask__plus {
+        --size: 30px;
+        --heightLine: 3.6px;
+    }
 }
 
 .addTask__plus::after {
