--- a/src/scss/components/_selectChanges.scss
+++ b/src/scss/components/_selectChanges.scss
@@ -37,11 +37,23 @@
     bottom: 105px;
 }
 
+@media (max-width: 1399px) {
+    .selectChanges-absolute {
+        width: 114px;
+        height: 105px;    
+    }
+}
+
+@media (max-width: 1199px) {
+    .selectChanges-absolute {
+        width: 110px;
+        height: 103px;
+    }
+}
+
 .selectChanges-absolute.demo {
     bottom: 162px;
 }
-
-
 
 .selectChanges_task {
     font-style: normal;
@@ -50,13 +62,26 @@
     color: #8A8383;
     font-family: 'Roboto', sans-serif;
 
-    margin-bottom: 18px;
+    margin-bottom: 12px;
     cursor: pointer;
-    padding: 4px;
+    padding: 7px 20px;
 
     transition: 0.1s;
     &:hover {
         color: #766f6f;
+    }
+}
+
+@media (max-width: 1399px) {
+    .selectChanges_task {
+        font-size: 19px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .selectChanges_task {
+        font-size: 18px;
+        padding: 6px 17px;
     }
 }
 
@@ -67,11 +92,24 @@
     color: #8A8383;
     font-family: 'Roboto', sans-serif;
     cursor: pointer;
-    padding: 4px;
+    padding: 7px 20px;
 
 
     transition: 0.1s;
     &:hover {
         color: #706b6b;
+    }
+}
+
+@media (max-width: 1399px) {
+    .selectChanges_status {
+        font-size: 19px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .selectChanges_status {
+        font-size: 18px;
+        padding: 6px 17px;
     }
 }
