--- a/src/scss/components/_static.scss
+++ b/src/scss/components/_static.scss
@@ -17,6 +17,18 @@
     margin: -20px 0 30px 50px
 }
 
+@media (max-width: 1399px) {
+    .demo__description {
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .demo__description {
+        font-size: 21.5px;
+    }
+}
+
 .static {
     display: flex;
     align-items: center;
@@ -35,4 +47,20 @@
     box-shadow: 1px 1px 2px rgba(246, 246, 246, 0.3), -1px -1px 2px rgba(202, 202, 202, 0.5), inset -5px 5px 10px rgba(202, 202, 202, 0.2), inset 5px -5px 10px rgba(202, 202, 202, 0.2), inset -5px -5px 10px rgba(246, 246, 246, 0.9), inset 5px 5px 13px rgba(202, 202, 202, 0.9);
     border-radius: 20px;
     margin-right: 20px;
+}
+
+@media (max-width: 1399px) {
+    .static {
+        width: 253px;
+        height: 52px;
+        font-size: 31px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .static {
+        width: 220px;
+        height: 48px;
+        font-size: 27px;
+    }
 }
